# Followup-AI

./: .env.example  .gcloudignore  .gitignore  .gitleaks.toml  .replit  AGENT_CLONA_DOCUMENTATION.md  AI_API_DOCUMENTATION.md  AI_TESTING_GUIDE.md  AUDIT_REPORT.md  AUDIT_SUMMARY.md  CAMERA_INTEGRATION_GUIDE.md  CLOUD_RUN_EXPRESS_DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DETERIORATION_SYSTEM.md  DEV_README.md  DISEASE_SPECIFIC_EDEMA_MONITORING.md  DISEASE_SPECIFIC_RESPIRATORY_MONITORING.md  EDEMA_ANALYSIS_IMPLEMENTATION.md  EMAIL_VERIFICATION_FIX_SUMMARY.md  FACIAL_PUFFINESS_SCORE_DOCUMENTATION.md  GUIDED_EXAM_IMPLEMENTATION_SUMMARY.md  GUIDED_VIDEO_EXAMINATION_DOCUMENTATION.md  HIPAA_SECURITY_IMPLEMENTATION.md  HIPAA_SECURITY_SUMMARY.md  MIGRATION_COMPLETE.md  ML_SYSTEM_SUMMARY.md  NAIL_ANALYSIS_IMPLEMENTATION.md  PRODUCTION_SETUP_GUIDE.md  PYTHON_BACKEND_DEBUG_REPORT.md  PYTHON_BACKEND_SETUP.md  QUICK_START_GUIDE.md  README_DEPLOYMENT.md  README_ML_STARTUP.md  README_STARTUP.md  RESPIRATORY_METRICS_HONEST_STATUS.md  RESPIRATORY_METRICS_IMPLEMENTATION.md  RESPIRATORY_METRICS_STATUS.md  SECURITY_IMPROVEMENTS.md  SECURITY_MIGRATION_GUIDE.md  SECURITY_QUICK_REFERENCE.md  (+29 more)
alembic/: env.py
app/: AUDIT_BATCH2.md  auth.py  config.py  database.py  database_enhanced.py  dependencies.py  gcp_config.py  main.py  main_behavior_ai.py  main_working.py  models.py
attached_assets/: IMG_2639_1764182928818.heic  IMG_2668_1764792561144.heic  IMG_2669_1764792559428.heic  IMG_2670_1764792557536.heic  Pasted-1-Logistic-Regression-What-type-of-data-it-needs-Struct_1764678467975.txt  (+15 more)
(+769 files in other folders)
